# auto_gippity_udemy

./: Cargo.toml  README.md
.cargo/: config.toml
schemas/: api_schema.json
src/: main.rs
src/ai_functions/: aifunc_architect.rs  aifunc_backend.rs  aifunc_managing.rs
src/apis/: call_requests.rs  constants.rs  mod.rs
src/helpers/: command_line.rs  general.rs
src/models/agent_basic/: basic_agent.rs  basic_traits.rs
src/models/agents/: agent_architect.rs  agent_backend.rs  agent_traits.rs
src/models/agents_manager/: managing_agent.rs
src/models/general/: llm.rs
