[package]
name = "auto_gipitty_udemy"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
# used for coloring CLI prompt
crossterm = "0.26.1"
async-trait = "0.1.68"
webbrowser = "0.8.9"
strum = "0.24.1"
strum_macros = "0.24.3"
ai_functions_vasile = "0.1.0"
thiserror = "1.0.63"

[features]
# intended for marking tests that make OpenAI API calls
openai-coverage = []